# file-lister

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
scripts/: build_exe.ps1
