[project]
name = "file-lister"
version = "1.0.1"
description = "A polished Python GUI tool for listing files from local or network paths with filtering support."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Tobin" }]
license = { file = "LICENSE" }
dependencies = [
    "ttkbootstrap>=1.10.1",
]

[project.urls]
Homepage = "https://github.com/caifugao110/file-lister"
Repository = "https://github.com/caifugao110/file-lister"

[project.scripts]
file-lister = "app:main"

[tool.setuptools]
py-modules = ["app"]
